<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_profile_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_incidencia"
            android:icon="@drawable/baseline_report_problem_24"
            android:title="@string/incidencia" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>
    </group>
</menu>