<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/perfil"
            android:textColor="@color/verde_oscuro"
            android:textSize="25sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="profile"
                android:src="@drawable/business_profile" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/nombre_de_usuario"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green"
            app:placeholderTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/username"
                android:padding="14dp"
                android:shadowColor="@color/darker_gray"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/spinner"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/background_spinner_layout"
                android:dropDownVerticalOffset="40dp"
                android:gravity="center"
                android:text="+34"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                app:placeholderTextColor="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/telephoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/phone"
                    android:inputType="number"
                    android:maxLength="15"
                    android:padding="14dp"
                    android:shadowColor="@color/darker_gray"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green"
            app:placeholderTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/email"
                android:padding="14dp"
                android:shadowColor="@color/darker_gray"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green"
            app:placeholderTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/not_visible"
                android:padding="14dp"
                android:shadowColor="@color/darker_gray"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/puntuacion"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green"
            app:placeholderTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/puntuacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="14dp"
                android:shadowColor="@color/darker_gray"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/guardar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_green"
            android:text="@string/guardar" />
</LinearLayout>

