<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:contentDescription="@string/hombre_viajando_en_villabesa"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/bycicle" />

        <ImageView
            android:contentDescription="@string/hombre_viajando_en_villabesa"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/bycicle" />

        <ImageView
            android:contentDescription="@string/hombre_viajando_en_villabesa"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/bycicle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_view_login"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/crear_cuenta"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/verde_oscuro"
                android:gravity="center"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                app:placeholderTextColor="@color/green"
                android:hint="@string/nombre_de_usuario">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/username"
                    android:padding="14dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:shadowColor="@color/darker_gray"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    app:hintTextColor="@color/green"
                    app:boxStrokeColor="@color/green"
                    app:placeholderTextColor="@color/green"
                    android:hint="Selecciona viaje">
                    <AutoCompleteTextView
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />
                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextColor="@color/green"
                    app:boxStrokeColor="@color/green"
                    app:placeholderTextColor="@color/green"
                    android:hint="@string/phone_number">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="15"
                        android:drawableEnd="@drawable/phone"
                        android:padding="14dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:shadowColor="@color/darker_gray"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                app:placeholderTextColor="@color/green"
                android:hint="@string/email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/email"
                    android:inputType="text"
                    android:padding="14dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:shadowColor="@color/darker_gray"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                app:placeholderTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/not_visible"
                    android:padding="14dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:shadowColor="@color/darker_gray"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                app:placeholderTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/not_visible"
                    android:padding="14dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:shadowColor="@color/darker_gray"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/recycling"
                android:layout_gravity="center"
                android:visibility="gone"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginTop="16dp"
                android:text="@string/error"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:background="@drawable/btn_green"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                />

            <TextView
                android:id="@+id/btn_login"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volver al login"
                android:textSize="18sp"
                android:textColor="@color/green"
                android:textStyle="bold|italic"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>